[package]
name = "monobank_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
thiserror = "1.0.62"
log = "0.4.22"
iso_currency = "0.4.4"
chrono = "0.4.38"

[[bin]]
name = "example"
path = "src/bin/example.rs"